--- a/assets/css/controllers/adcionarProduto.css
+++ b/assets/css/controllers/adcionarProduto.css
@@ -54,14 +54,15 @@
     }
 
 
-/* Drag And Drop CSS */
+    /* Drag And Drop CSS */
     .drop-zone {
-        max-width: 200px;
-        height: 200px;
+        /* max-width: 200px; */
+        /* height: 200px; */
+        margin: 10px 29px;
         padding: 25px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        /* display: flex; */
+        /* align-items: center; */
+        /* justify-content: center; */
         text-align: center;
         font-family: "Quicksand", sans-serif;
         font-weight: 500;
@@ -70,17 +71,17 @@
         color: #cccccc;
         border: 4px dashed #009578;
         border-radius: 10px;
-      }
-      
-      .drop-zone--over {
+    }
+
+    .drop-zone--over {
         border-style: solid;
-      }
-      
-      .drop-zone__input {
+    }
+
+    .drop-zone__input {
         display: none;
-      }
-      
-      .drop-zone__thumb {
+    }
+
+    .drop-zone__thumb {
         width: 100%;
         height: 100%;
         border-radius: 10px;
@@ -88,9 +89,9 @@
         background-color: #cccccc;
         background-size: cover;
         position: relative;
-      }
-      
-      .drop-zone__thumb::after {
+    }
+
+    .drop-zone__thumb::after {
         content: attr(data-label);
         position: absolute;
         bottom: 0;
@@ -101,7 +102,6 @@
         background: rgba(0, 0, 0, 0.75);
         font-size: 14px;
         text-align: center;
-      }
+    }
 
-      /* Drag And Drop CSS */
-      
+    /* Drag And Drop CSS */
