--- a/assets/css/controllers/adcionarProduto.css
+++ b/assets/css/controllers/adcionarProduto.css
@@ -56,7 +56,7 @@
 
     /* Drag And Drop CSS */
     .drop-zone {
-        /* max-width: 200px; */
+         max-width: 23%; 
         height: 200px; 
         margin: 10px 29px;
         padding: 25px;
