--- a/assets/css/controllers/visualizarProdutos.css
+++ b/assets/css/controllers/visualizarProdutos.css
@@ -60,6 +60,8 @@
     }
 
     .drop-zone__thumb {
+        background-position: center;
+        background-repeat: no-repeat;
         width: 100%;
         height: 100%;
         border-radius: 10px;
