--- a/assets/css/controllers/adcionarProduto.css
+++ b/assets/css/controllers/adcionarProduto.css
@@ -82,13 +82,17 @@
     }
 
     .drop-zone__thumb {
+        background-position: center;
+        background-repeat: no-repeat;
         width: 100%;
         height: 100%;
         border-radius: 10px;
         overflow: hidden;
-        background-color: #cccccc;
+        background-color: #f4f4f4;
         background-size: cover;
         position: relative;
+        display: flex;
+        justify-content: center;
     }
 
     .drop-zone__thumb::after {
@@ -106,13 +110,13 @@
 
     @media screen and (min-width: 748px) {
         .drop-zone__thumb {
-            width: 50%;
+            width: 100%;
             height: 100%;
         }
       }
     @media screen and (min-width: 1250px) {
         .drop-zone__thumb {
-            width: 50%;
+            width: 100%;
             height: 110%;
         }
         .drop-zone {
