--- a/assets/css/controllers/visualizarProdutos.css
+++ b/assets/css/controllers/visualizarProdutos.css
@@ -66,7 +66,7 @@ img{
     .drop-zone__thumb {
         background-position: center;
         background-repeat: no-repeat;
-        width: 100%;
+        width: auto;
         height: 100%;
         border-radius: 10px;
         overflow: hidden;
@@ -92,13 +92,13 @@ img{
 
     @media screen and (min-width: 748px) {
         .drop-zone__thumb {
-            width: 100%;
+            width: auto;
             height: 100%;
         }
       }
     @media screen and (min-width: 1250px) {
         .drop-zone__thumb {
-            width: 100%;
+            width: auto;
             height: 110%;
         }
         .drop-zone {
