class input-numberProduto

--- a/assets/css/controllers/adcionarProduto.css
+++ b/assets/css/controllers/adcionarProduto.css
@@ -40,6 +40,10 @@
         text-indent: 0;
     }
 
+    .input-numberProduto{
+        width: 4em;
+    }
+
     input#precoVenda {
         width: 6em;
     }
