--- a/assets/css/controllers/adcionarProduto.css
+++ b/assets/css/controllers/adcionarProduto.css
@@ -49,7 +49,8 @@
     }
 
     .btn-calcular {
-        width: 6em;
+        margin-left: 1em;
+        width: 5em;
     }
 
     label.form-check-label {
