--- a/assets/css/controllers/adcionarProduto.css
+++ b/assets/css/controllers/adcionarProduto.css
@@ -41,7 +41,8 @@
     }
 
     .input-numberProduto{
-        width: 4.3em;
+        width: 4em;
+        margin-right: 0.3em;
     }
 
     input#precoVenda {
